main2023: Fix iframe embed size on mobile

--- a/Instanssi/main2023/static/main2023/css/_general.scss
+++ b/Instanssi/main2023/static/main2023/css/_general.scss
@@ -11,6 +11,10 @@ img {
     max-width: 99% !important;
     height: auto !important;
 }
+iframe {
+    // work around embedded content layout issues
+    max-width: 100%;
+}
 body * {
     color: #333;
     font-size: 15px;
